src/app/pages/components/audio-player/audio-player.component.scss
:host {
  display: block;
  width: 100%;
}

.time {
  width: 40px;
  text-align: center;
}

.image {
    width: 80px;
    height: 80px;
    margin: 0px 10px 0px 0px;
}

.top {
    gap: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
}

.player-bar {
    display: flex;
    align-items: center;
    width: 100%;
}

.shuffle-button {
    width: 20px;
    height: 20px;
    background-color: transparent;
    border: none;
    cursor: pointer;
}



.progress {
  display: flex;
  align-items: center;
  gap: 10px;
  width: 100%;
  padding-top: 10px;
}

.progress input {
  flex: 1;
}

.audio-slider {
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    height:5px;
    background: linear-gradient(
    to right,
    #000000 var(--fill, 0%),
    #ffffff var(--fill, 0%)   
    );
    outline: none;
    -webkit-transition: .2s;
    transition: opacity .5s;

}

.audio-slider::-webkit-slider-thumb { // TODO: add hover for thumb and make it bigger
  -webkit-appearance: none; 
  appearance: none;
  width: 0px; 
  height: 5px; 
  background: #000000; 
  cursor: pointer; 
}


.track-info {
  display: flex;
  flex-direction: column;
  margin-bottom: 6px;
}

.main {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex: 1;
}

.center {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.track-info {
    font-size: 20px;
}

.artist {
    padding: 10px 0px 4px 0px;
}

.control-button {
    width: 50px;
    height: 50px;
    background-color: transparent;
    border: none;
    cursor: pointer;
}


.control-button-10sec-back {
    width: 20px;
    height: 20px;
}

.control-button-10sec-forward {
    width: 20px;
    height: 20px;
}

.control-button-back {
    width: 30px;
    height: 30px;
}

.control-button-next {
    width: 30px;
    height: 30px;
}

